--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,13 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+strong {
+	font-weight: 600;
+}
+
+a {
+	&:hover {
+		text-decoration: underline;
+	}
+}
