feat: add media styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,23 @@
 	:root {
 		--button-rounded: 9999px;
 	}
+
+	/* Gradient styles*/
+	.gradient-default {
+		@apply bg-gradient-to-br from-indigo-500 via-purple-500 to-pink-500;
+	}
+	.gradient-primary {
+		@apply bg-gradient-to-br from-primary/80 to-primary;
+	}
+
+	/* Media styles*/
+	.media-style-screenshot {
+		@apply bg-white p-12 rounded-lg gradient-default;
+
+		img {
+			@apply shadow-lg rounded;
+		}
+	}
 }
 
 body {
