fix: icon styling issues

--- a/src/app/globalicons.css
+++ b/src/app/globalicons.css
@@ -1,6 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,100..700,0..1,-50..200&display=block');
 
-.material-symbols-rounded {
+/** 
+ * Declare a variation of the icon-symbols class without font-size.
+ * This works a bit better with tailwindcss text sizes and it's specificity.
+ */
+.icon-symbols {
+	font-family: 'Material Symbols Rounded';
+	font-weight: 400;
+	font-style: normal;
+	/*font-size: 24px;*/
+	display: inline-block;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+	white-space: nowrap;
+	direction: ltr;
+}
+
+.icon-symbols {
 	font-variation-settings:
 		'FILL' 0,
 		'wght' 400,
